Hecho el dynamic search con filtros para Song con éxito